[package]
name = "aeron-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Aeron client library"
homepage = "https://github.com/GreenPenguino/aeron-client"
repository = "https://github.com/GreenPenguino/aeron-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
